location sub page 설정

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=384c1025cdd9554f4e07d967dedf5b1b"></script>
   <title>Seoul Jazz Festival</title>
 </head>
 
